--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&family=Roboto+Mono:wght@300&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Exo 2', sans-serif;
+  text-transform: uppercase;
+  color: #2B0300;
+}
+
+h1 {
+  font-size: 50px;
+  margin: 5px 0;
+  justify-self: flex-start;
+}
+
+p {
+  font-family: 'Roboto Mono', monospace;
+  color: #2B0300;
 }
