--- a/src/styling/AboutPage.css
+++ b/src/styling/AboutPage.css
@@ -2,4 +2,20 @@
   width: 100%;
   height: 100vh;
   background-color: #8D4038;
+  display: flex;
+  justify-content: center;
+}
+
+.AboutWrapper {
+  width: 90%;
+  height: fit-content;
+  padding: 10px;
+  background-color: #F9EBD9;
+  box-sizing: border-box;
+  position: relative;
+  top: 150px;
+}
+
+.AboutContentWrapper {
+  display: flex;
 }
