--- a/src/styling/AboutPage.css
+++ b/src/styling/AboutPage.css
@@ -1,9 +1,12 @@
 .AboutPageContainer {
   width: 100%;
-  height: 100vh;
+  box-sizing: border-box;
+  min-height: 100vh;
+  height:fit-content;
   background-color: #8D4038;
   display: flex;
   justify-content: center;
+  padding-bottom: 15px;
 }
 
 .AboutWrapper {
@@ -12,10 +15,9 @@
   padding: 10px;
   background-color: #F9EBD9;
   box-sizing: border-box;
-  position: relative;
-  top: 150px;
+  margin-top: 100px;
 }
 
-.AboutContentWrapper {
-  display: flex;
+.AboutContentWrapper > p {
+  text-align: justify; 
 }
