--- a/src/styling/ExperiencePage.css
+++ b/src/styling/ExperiencePage.css
@@ -1,21 +1,13 @@
 .ExperiencePageContainer {
+  box-sizing: border-box;
   width: 100%;
   min-height: 100vh;
+  padding-bottom: 15px;
   background-color: #F9EBD9;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-/* .ExperienceWrapper {
-  width: 90%;
-  height: fit-content;
-  padding: 10px;
-  background-color: #8D4038;
-  box-sizing: border-box;
-  position: relative;
-  top: 150px;
-} */
 
 .ExperienceHeader {
   display: flex;
@@ -23,9 +15,14 @@
   width: 90%;
 }
 
-.ExperienceHeading {
-  margin: 100px 0 25px 0;
+.ExperienceHeading1 {
+  align-self: flex-start;
 }
+
+.ExperienceHeading2 {
+  margin-top: 100px;
+}
+
 .ExperienceWrapper h2 {
   color: white;
 }
@@ -37,8 +34,6 @@
 
 .ProjectSectionContainer {
   box-sizing: border-box;
-  background-color: white;
-  padding: 10px;
   width: 90%;
   height:fit-content;
   display: flex;
@@ -46,7 +41,18 @@
   align-items: center;
 }
 
+.ExtraLinkContainer {
+  display: flex;
+  margin-top: 20px;
+}
+
+.ExtraLink {
+  font-family: 'Roboto Mono', monospace;
+  color: #2B0300;
+}
+
 .WorkSectionContainer {
+  width: 90%;
   box-sizing: border-box;
   background-color: #F9EBD9;
   padding: 10px;
