--- a/src/styling/WorkSection.css
+++ b/src/styling/WorkSection.css
@@ -3,11 +3,10 @@
 .WorkWrapper {
   box-sizing: border-box;
   border-left: 3px dashed #A86520;
+  border-bottom: 3px dashed #A86520;
   padding: 10px;
-}
-
-.PlaceP {
-
+  background-color: white;
+  margin-top: 15px;
 }
 
 .TimeP {
