added redirects file

--- a/src/components/pages/styling/MiscPage.css
+++ b/src/components/pages/styling/MiscPage.css
@@ -45,6 +45,10 @@
   text-align: left;
 }
 
+.MiscContent > p {
+  font-style: italic;
+}
+
 .MiscContent:nth-child(1) {
   width: 100%;
   padding-bottom: 20px;
