--- a/src/components/UI/styling/ExperienceLinks.css
+++ b/src/components/UI/styling/ExperienceLinks.css
@@ -3,18 +3,23 @@
 }
 
 .ExpLinkHeading {
-  font-family: 'Roboto Mono', monospace;
-  font-size: 16px;
-  
+  font-family: 'Exo 2', sans-serif;
+  text-transform: uppercase;
+  font-size: 18px;
 }
 
 .ExpLink {
-  padding: 0 10px;
   text-decoration: none;
   color: #2B0300;
 }
 
-.ExpLink:nth-child(odd){
+.ExpLink:nth-child(1) {
   text-decoration: underline;
-   
 }
+
+@media (min-width: 768px) {
+  .ExpLinkHeading{
+    font-size: 22px;
+  }
+}
+
