--- a/src/components/UI/styling/LinkButton.css
+++ b/src/components/UI/styling/LinkButton.css
@@ -5,6 +5,7 @@ text-transform: uppercase;
 text-decoration: none;
 border: 2px solid #8D4038;
 padding: 10px 0;
+margin-top: 20px;
 width: 100%;
 text-align: center;
 }
