--- a/src/components/pages/styling/MiscPage.css
+++ b/src/components/pages/styling/MiscPage.css
@@ -2,11 +2,10 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 100vh;
-  height: fit-content;
   background-color: #8D4038;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -14,7 +13,7 @@
   box-sizing: border-box;
   width: 90%;
   margin-top: 100px;
-  padding: 10px;
+  padding: 20px;
   height: fit-content;
   background-color: #F9EBD9;
   box-sizing: border-box;
@@ -88,9 +87,37 @@ footer {
   height: 200px;
   margin-top: 100px;
   background-color: #2B0300;
+  position: relative;
+  bottom: 0;
 }
 
 footer img {
   width: 80px;
   height: 80px;
+}
+
+@media (min-width: 768px) {
+  .MiscWrapper {
+    width: 70%;
+  }
+
+  .Duck {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .MiscWrapper {
+    width: 50%;
+    margin-top: 80px;
+  }
+
+  .SpotifyWrapper {
+    margin-top: 50px;
+  }
+
+  footer {
+    justify-content: space-evenly;
+  }
 }
