--- a/src/components/styling/WorkSection.css
+++ b/src/components/styling/WorkSection.css
@@ -18,3 +18,25 @@
   width: 8px;
   height: 8px;
 }
+
+@media (min-width: 1024px) {
+  .WorkWrapper {
+    width: 60%;
+  }
+
+  .WorkWrapper:nth-child(3) {
+    width: 70%;
+  }
+
+  .WorkWrapper:nth-child(4) {
+    width: 80%;
+  }
+
+  .WorkWrapper:nth-child(5) {
+    width: 90%;
+  }
+
+  .WorkWrapper:nth-child(6) {
+    width: 100%;
+  }
+}
