--- a/src/components/styling/Greeting.css
+++ b/src/components/styling/Greeting.css
@@ -13,12 +13,14 @@
   word-wrap: break-word;
 }
 
+/* TABLET VIEW */
 @media (min-width: 768px) {
   .GreetingWrapper {
     width: 70%;
   }
 }
 
+/* DESKTOP VIEW */
 @media (min-width: 1024px) {
   .GreetingWrapper {
     width: 50%;
