--- a/src/components/pages/styling/MiscPage.css
+++ b/src/components/pages/styling/MiscPage.css
@@ -96,6 +96,12 @@ footer img {
   height: 80px;
 }
 
+footer img:hover {
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1); 
+}
+
 /* TABLET VIEW */
 @media (min-width: 768px) {
   .MiscWrapper {
