--- a/src/components/pages/styling/ExperiencePage.css
+++ b/src/components/pages/styling/ExperiencePage.css
@@ -47,6 +47,12 @@
   color: #2B0300;
 }
 
+.ExtraLink:hover {
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1); 
+}
+
 .WorkSectionContainer {
   width: 90%;
   box-sizing: border-box;
