--- a/src/components/styling/Header.css
+++ b/src/components/styling/Header.css
@@ -22,6 +22,11 @@
   padding: 10px 0;
 }
 
+.NavLink:hover {
+  background-color: #8D4038;
+  color: #F9EBD9;
+}
+
 .NavLink:nth-child(2n) {
   width: 30%;
 }
