trying a calculation on vh

--- a/src/components/pages/styling/AboutPage.css
+++ b/src/components/pages/styling/AboutPage.css
@@ -2,7 +2,8 @@
   width: 100%;
   box-sizing: border-box;
   min-height: 100vh;
-  height:fit-content;
+  height: calc(var(--vh, 1vh) * 100);
+  /* height:fit-content; */
   background-color: #8D4038;
   display: flex;
   justify-content: center;
