--- a/src/components/pages/styling/MiscPage.css
+++ b/src/components/pages/styling/MiscPage.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   background-color: #8D4038;
   display: flex;
   flex-direction: column;
