--- a/src/components/pages/styling/AboutPage.css
+++ b/src/components/pages/styling/AboutPage.css
@@ -1,9 +1,8 @@
 .AboutPageContainer {
   width: 100%;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   min-height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-  /* height:fit-content; */
+  height:fit-content;
   background-color: #8D4038;
   display: flex;
   justify-content: center;
@@ -15,7 +14,7 @@
   height: fit-content;
   padding: 20px;
   background-color: #F9EBD9;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   margin-top: 100px;
 }
 
@@ -24,7 +23,7 @@
 }
 
 /* TABLET VIEW */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .AboutWrapper {
     width: 70%;
     margin-top: 150px;
@@ -32,7 +31,7 @@
 }
 
 /* DESKTOP VIEW */
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .AboutWrapper {
     margin-top: 80px;
     padding: 20px 40px;
