--- a/src/components/pages/styling/MiscPage.css
+++ b/src/components/pages/styling/MiscPage.css
@@ -1,8 +1,7 @@
 .MiscPageContainer {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   width: 100%;
   min-height: 100vh;
-  min-height: calc(var(--vh, 1vh) * 100);
   background-color: #8D4038;
   display: flex;
   flex-direction: column;
@@ -11,13 +10,12 @@
 }
 
 .MiscWrapper {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   width: 90%;
   margin-top: 100px;
   padding: 20px;
   height: fit-content;
   background-color: #F9EBD9;
-  box-sizing: border-box;
 }
 
 .MiscContentWrapper {
@@ -37,7 +35,7 @@
 
 .MiscContent {
   width: 100%;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -58,14 +56,14 @@
 .MiscContent:nth-child(2) {
   width: 50%;
   padding: 10px 10px 15px 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   border-right: 3px dashed #A86520;
 }
 
 .MiscContent:nth-child(3) {
   width: 50%;
   padding: 10px 0 15px 10px;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 .SpotifyWrapper {
@@ -104,7 +102,7 @@ footer img:hover {
 }
 
 /* TABLET VIEW */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .MiscWrapper {
     width: 70%;
   }
@@ -116,7 +114,7 @@ footer img:hover {
 }
 
 /* DESKTOP VIEW */
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .MiscWrapper {
     width: 50%;
     margin-top: 80px;
