--- a/src/components/styling/Greeting.css
+++ b/src/components/styling/Greeting.css
@@ -14,14 +14,14 @@
 }
 
 /* TABLET VIEW */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .GreetingWrapper {
     width: 70%;
   }
 }
 
 /* DESKTOP VIEW */
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .GreetingWrapper {
     width: 50%;
   }
