--- a/src/components/styling/Header.css
+++ b/src/components/styling/Header.css
@@ -17,7 +17,7 @@
   text-decoration: none;
   width: 20%;
   text-align: center;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   border: 1px solid #8D4038;
   padding: 10px 0;
 }
@@ -51,7 +51,7 @@
 }
 
 /* TABLET VIEW */
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .NavLink:nth-child(1n) {
     width: calc(100% / 6);
   }
