--- a/src/components/styling/MainImage.css
+++ b/src/components/styling/MainImage.css
@@ -1,11 +1,11 @@
 .Img {
   float: left;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   margin: 0 20px 20px 0;
 }
 
 /* TABLET VIEW */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .Img {
     width: 200px;
   }
