--- a/src/components/styling/WorkSection.css
+++ b/src/components/styling/WorkSection.css
@@ -1,5 +1,5 @@
 .WorkWrapper {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   border-left: 3px dashed #A86520;
   border-bottom: 3px dashed #A86520;
   padding: 10px;
@@ -17,7 +17,7 @@
   height: 8px;
 }
 
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .WorkWrapper {
     width: 60%;
   }
